[package]
name = "tunneld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
pnet = "0.31.0"
pnet_macros_support = "0.31.0"
pnet_transport = "0.31.0"
regex = "1.7.0"
tun-tap = "0.1.3"
